# auth0-hack

./: .containerignore  .env.example  .gitignore  DEVPOST.md  Dockerfile  README.md  app.py  assets.001  assets.002  assets.003  assets.004  assets.005  assets.006  assets.007  assets.008  chainlit.md  ibmcloud_info.yml  main.py  pyproject.toml  railway.toml  requirements-railway.txt  setup_connections.sh  test_results.jsonl  test_results_summary.txt  video_description.md
.chainlit/: config.toml
amanat/: __init__.py  __main__.py  agent.py  auth.py  ciba.py  cli.py
amanat/knowledge/: policies.py  policy_chunks.json  rules.py
amanat/tools/: bee_tools.py  docling_tool.py  onedrive.py  outlook.py  scanner.py  slack.py
assets/: slides.001  slides.004  slides.md
assets/banners/: banner.html  banner_arch.html
demo-data/: generate_scanned_pdfs.py  generate_table_pdfs.py  test_granite_vlm.py
demo-data/drive/: Biometric_Enrollment_Log.csv  Cataclysm_Displaced_Registry_2026.csv  Donor_Report_Q1_2026.txt  Field_Team_Contacts.csv  GBV_Incident_Reports_2026.csv  Upheaval_Displaced_Registry_2026.csv
demo-data/github/: README.md  config.yaml  seed_data.sql
public/: custom.css  theme.json
research/: humanitarian-data-governance-research.md  humanitarian-ux-design-research.md  totk-world-reference.md
scripts/: container_entrypoint.sh  install_slack_bot.py  preprocess_policies.py  read_audit_log.py  setup_demo.py  setup_mfa.py  test_40_queries.py  test_50_queries.py
tests/: test_docling.py  test_granite.py  test_live_integrations.py  test_workflows.py
(+4 files in other folders)
